# Access-Control-Management-Over-IOT

./: .gitignore  Answer.md  LICENSE  README.md
embedded/arduino/: sketch_apr29a.ino
embedded/arduino/http/sketch_apr29a/: sketch_apr29a.ino
embedded/arduino/websocket/sketch_apr29a/: sketch_apr29a.ino
embedded/arduino/websocket/socketsketch_apr29a.ino/: socketsketch_apr29a.ino.ino
embedded/proteus/: CPSproject1.pdsprj
embedded/proteus/Project Backups/: CPSproject1 [Autosaved].pdsprj
monitoring-gui/: .gitignore  CMakeLists.txt  cpsapplication.cpp  cpsapplication.h  cpshistorywindow.cpp  cpsmainwindow.cpp  cpsmainwindow.h  cpstextformatmanip.cpp  cpstextformatmanip.h  cpswebsocket.cpp  cpswebsocket.h
webserver/: CMakeLists.txt  ValidRfid.csv  ValidRfid.qrc  cpstextformatmanip.cpp  cpstextformatmanip.h  defs.h  filehandler.cpp  filehandler.h  history.csv  httpserver.cpp  log.csv  main.cpp  resourcefiles.qrc  usersinfo.csv  webcontainer.cpp  webcontainer.h  webserver.cpp  webserver.h  webserver.pro  websocket.cpp  websocket.h  websocketresponsehandler.cpp  websocketresponsehandler.h
webserver/assets/: name.csv
